minor fixes in tests